--- a/src/main/resources/assets/greekmyths/lang/en_us.json
+++ b/src/main/resources/assets/greekmyths/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-    "item.greekmyths.celestial_bronze_ingot": "Celestial Bronze Ingot"
+    "item.greekmyths.celestial_bronze_ingot": "Celestial Bronze Ingot",
+    "item.greekmyths.stygian_iron_ingot": "Sytgian Iron Ingot",
+    "item.greekmyths.imperial_gold_ingot": "Imperial Gold Ingot (Texture Pending)"
 }
