--- a/src/main/resources/assets/greekmyths/lang/en_us.json
+++ b/src/main/resources/assets/greekmyths/lang/en_us.json
@@ -2,8 +2,10 @@
     "item.greekmyths.celestial_bronze_ingot": "Celestial Bronze Ingot",
     "item.greekmyths.stygian_iron_ingot": "Sytgian Iron Ingot",
     "item.greekmyths.imperial_gold_ingot": "Imperial Gold Ingot (Texture Pending)",
+    "item.greekmyths.raw_celestial_bronze": "Raw Celestial Bronze",
 
     "item.greekmyths.celestial_bronze_sword": "Celestial Bronze Sword",
 
-    "block.greekmyths.celestial_bronze_block": "Block of Celestial Bronze"
+    "block.greekmyths.celestial_bronze_block": "Block of Celestial Bronze",
+    "block.greekmyths.celestial_bronze_deepslate_ore": "Celestial Bronze Deepslate Ore"
 }
