--- a/src/main/resources/assets/greekmyths/lang/en_us.json
+++ b/src/main/resources/assets/greekmyths/lang/en_us.json
@@ -7,5 +7,5 @@
     "item.greekmyths.celestial_bronze_sword": "Celestial Bronze Sword",
 
     "block.greekmyths.celestial_bronze_block": "Block of Celestial Bronze",
-    "block.greekmyths.celestial_bronze_deepslate_ore": "Celestial Bronze Deepslate Ore"
+    "block.greekmyths.celestial_bronze_deepslate_ore": "Deepslate Celestial Bronze Ore"
 }
